add previous and next page navigation

--- a/index.html
+++ b/index.html
@@ -19,10 +19,12 @@
             <button type="submit">Search</button>
           </form>
           
-          <h2>Results</h2>
+          <h2></h2>
           <div class="js-search-results">
             <img src="" class ="thumbnail">
           </div>
+          <button class="prev-button">Prev</button>
+          <button class="next-button">Next</button>
       </main>
       <script src="index.js"></script>
     </body>
